--- a/data/index.css
+++ b/data/index.css
@@ -1,6 +1,6 @@
 :root {
-  --section-overlay: rgba(0, 0, 0, 0.7);
-  --background-overlay: rgba(0, 0, 0, 0.2);
+  --section-overlay: rgba(1, 34, 43, 0.082);
+  --background-overlay: rgba(15, 1, 1, 0.2);
 }
 * {
   margin: 0;
@@ -9,9 +9,26 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #form{
-    margin-top: 2rem;
+    margin-top: 4rem;
+}
+button{
+    padding: 2rem;
 }
 #city{
     padding: 0.6rem;
     width: 50%;
+}
+.row{
+    margin-left: 20%;
+    margin-right: 10%;
+}
+.card-body{
+    background-color: var(--section-overlay);
+    color: black;
+    padding: 1rem;
+    border-radius: 3%;
+    font-size: 15px;
+    font-weight: 800;
+   
+
 }
